@@ -8,6 +8,8 @@ Bug fixes:
 ~~~~~~~~~~
 - The change on ortography didn't happen because I forgot to 
   compile the po-files.
+- Searching with open ended periods failed after the fix for 
+  the busy checker.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
